--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^15.0.3",
     "@angular/router": "^15.0.3",
     "bootstrap": "^5.2.3",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.6.0",
     "tslib": "^2.4.1",
     "zone.js": "~0.12.0"
@@ -36,6 +38,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.8.4"
   }
 }
